kustomize/herringbone/apps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herringbone-apps
  namespace: herringbone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: herringbone-apps
  template:
    metadata:
      labels:
        app: herringbone-apps
    spec:
      serviceAccountName: herringbone-apps-serviceaccount
      containers:
        - name: herringbone-apps
          image: quay.io/herringbone/herringbone-apps
          ports:
            - containerPort: 7002
              name: tcp-port
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "200m"
