kustomize/herringbone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herringbone-app
  namespace: herringbone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: herringbone-app
  template:
    metadata:
      labels:
        app: herringbone-app
    spec:
      containers:
        - name: herringbone-app
          image: quay.io/herringbone/herringbone-app
          ports:
            - containerPort: 7002
              name: tcp-port
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
