kustomize/herringbone/apps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: herringbone-apps-service
  namespace: herringbone
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: herringbone-apps
  ports:
    - name: tcp
      protocol: TCP
      port: 7002
      targetPort: 7002
