kustomize/herringbone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: herringbone-app-service
  namespace: herringbone
spec:
  ports:
  - name: tcp
    port: 7002
    protocol: TCP
    targetPort: 7002
  selector:
    app: herringbone-app
  type: ClusterIP
