kustomize/herringbone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: herringbone-app-ingress
  namespace: herringbone
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.herringbone.dev
    secretName: app-herringbone-dev-tls
  rules:
  - host: app.herringbone.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: herringbone-app-service
            port:
              number: 7002
